# zero2prod

./: Cargo.toml
migrations/: 20220802153932_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  main.rs  startup.rs
tests/: health_check.rs
