[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Andy Reynaldo <a.reynaldo.salina@gmail.com>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
actix-web = "4.0.0"
config = "0.13"
reqwest = "0.11"
serde = { version = "1", features = ["derive"]}
tokio = "1.20.1"

[dependencies.sqlx]
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]